cambios agregamos sitio de twich

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <p>
-        Hola estudiantes este es mi sitio web, sigueme en gork!!!
+        Hola amigos este es mi sitio web, sigueme en gork!!!
+        si quieres hablar un poco me avisas!!
     </p>
 </body>
 </html>
